<resources>
    <string name="app_name">BookingQBA</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="bienvenidos">Bienvenidos</string>
    <string name="navega_y_compara">Navega y Compara</string>
    <string name="lorem_ipsum">Lorem ipsum dolor ipsum dolor, ipsum dolor ipsum dolor ipsum dolor ipsum dolor.</string>
    <string name="llega_a_tu_destino">Llega a tu destino</string>
    <string name="hora_de_actualizar">Hora de Actualizar</string>
    <string name="actualizando">Actualizando</string>
    <string name="para_el_correcto"> Si deseas usar la aplicacion sin internet, marca actualizacion con imagenes.</string>
    <string name="actualizar_con_imagenes">Actualizacion con imagenes</string>
    <string name="para_cubanos">Para cubanos</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="dialog_provinces_title">Seleccione una provincia</string>
    <string name="positive_buttom">Cerrar</string>
    <string name="permission_dialog_title">Aviso!!</string>
    <string name="permission_dialog_positive">OK</string>
    <string name="permission_dialog_message">Esta aplicación requiere de multiples permisos para su
    correcto funcionamiento</string>
    <string name="permission_denied_title">Permisos denegados!!</string>
    <string name="permission_denied_message">Al parecer no se han otorgado los permisos.
        Diríjase a [Setting] > [Permission] y otórgelos</string>
    <string name="permission_go_setting">Ir</string>
    <string name="default_sync_date">2018-01-01T00:00:00</string>
    <string name="no_need_update">Base de Datos actualizada!!</string>
    <string name="location_title">Aviso!!</string>
    <string name="location_mess">Para obtener su ubicación, por favor active Localización del dispositivo</string>
    <string name="notification_sync_msg">Perfil de propietario pendiente de aprobación</string>
    <string name="latitude_label">Latitude</string>
    <string name="longitude_label">Longitude</string>
    <string name="last_update_time_label">Last location update time</string>
    <string name="start_updates">Start updates</string>
    <string name="stop_updates">Stop updates</string>
    <string name="location_settings_inadequate_warning">The location settings on the device are not
        adequate to run this sample. Fix in Settings.</string>
    <string name="permission_rationale">Location permission is needed for core functionality</string>
    <string name="permission_denied_explanation">Permission was denied, but is needed for core
        functionality.</string>
    <string name="settings">Settings</string>
    <string name="lorem">
        Lorem ipsum dolor sit amet consectetur adipiscing elit tempor quis, nascetur senectus varius venenatis justo neque interdum tincidunt. Morbi porttitor suscipit vehicula habitasse nisl aliquet, taciti proin quam tempus ultrices praesent volutpat, a dis sem ut sollicitudin. Elementum dapibus pharetra inceptos sed leo commodo, ad mollis facilisi ornare cursus cras et, tempus ridiculus pretium lacus ligula. Dapibus gravida dictum sed volutpat morbi porttitor orci habitasse montes litora lacinia, iaculis porta congue mattis tincidunt magna tempus inceptos ante praesent, sociosqu sollicitudin convallis curabitur id curae justo taciti torquent rhoncus.

Diam vitae sodales ullamcorper quis elementum eleifend mattis rutrum pulvinar nulla nam dis facilisis montes interdum aenean, eros facilisi ornare vivamus orci mollis vehicula a suspendisse varius mauris urna habitant dignissim. Id rhoncus commodo venenatis imperdiet molestie turpis lacus erat fermentum suscipit, vel massa fusce natoque eros posuere condimentum velit pharetra cras ullamcorper, dignissim mauris porttitor eget sociis cubilia ligula ridiculus dis. Eros tristique dui tortor penatibus vulputate in cursus, nam etiam fames auctor sociis. Dignissim tempor commodo hac orci fames mi nascetur ut, gravida donec dui lobortis libero integer lacus.

Natoque augue bibendum etiam aliquet fames vestibulum in justo libero elementum, tellus per egestas blandit cum netus consequat condimentum magna, tempus erat sociis vulputate aliquam dapibus ultrices viverra phasellus. Urna diam varius arcu scelerisque lectus magna porta hendrerit, nibh fringilla penatibus morbi placerat tellus rhoncus vehicula, metus pellentesque viverra malesuada tempor torquent risus. Semper ante fringilla odio accumsan dui sapien tincidunt erat montes condimentum quis praesent cursus nunc enim ridiculus, ultricies eget mollis aptent venenatis quam litora nec risus aenean luctus sociis sociosqu cubilia bibendum.

In conubia lacus scelerisque porttitor maecenas vitae inceptos nulla et, tortor sollicitudin justo at mauris tempor sapien gravida feugiat, cum euismod orci mollis dapibus dictumst venenatis tempus. Ridiculus primis egestas cubilia fusce fermentum imperdiet mollis feugiat lectus a metus, ut id nostra pretium leo ultrices proin rhoncus montes laoreet donec, penatibus vivamus consequat quis urna faucibus elementum turpis enim aliquet. Sollicitudin leo ultrices sed nostra curabitur in ad lacus, pretium eu sociis donec erat primis magna metus montes, molestie diam interdum sem taciti nec aliquet. Vestibulum enim himenaeos massa conubia dictum luctus posuere diam faucibus odio, litora justo senectus nunc class fringilla urna risus augue vel lectus, mauris potenti nisi consequat ultricies curae torquent mus imperdiet.
    </string>
    <string name="txt_feedback">Si te ha ayudado la aplicación y deseas sugerirnos una idea para mejorar, por favor escríbenos. Lo tomaremos en cuenta</string>
    <string name="sugerir">Sugerir</string>
    <string name="ayudanos_a_mejorar">Ayúdanos a mejorar</string>
    <string name="propiedad_intelectual">Propiedad Intelectual</string>
    <string name="actualizacion_disponible">Actualización Disponible</string>
    <string name="hace_mas_de_un_mes">Hace mas de un mes</string>
    <string name="ultima_actualizacion">Última actualización</string>
    <string name="detail">Detalles</string>
    <string name="comment">Comentarios</string>
    <string name="offer">Ofertas</string>
    <string name="empty_text">--------</string>
    <string name="empty_short_text">--</string>
    <string name="visitas">Visitas</string>
    <string name="comentarios">Comentarios</string>
    <string name="en_deseo">En Deseo</string>
    <string name="sugerencia">Logra el 100% completando estos campos:</string>
    <string name="emociones_en_comentarios">Emociones en comentarios</string>
    <string name="votaciones">Votaciones</string>
    <string name="_5">5</string>
    <string name="_4">4</string>
    <string name="_3">3</string>
    <string name="_2">2</string>
    <string name="_1">1</string>
    <string name="sugerencias_de_mejoras">Detalle de Renta</string>
    <string name="descripcion">Descripción</string>
    <string name="comentario">Comentario</string>
    <string name="facilidades">Facilidades</string>
    <string name="lugares_cercanos">Lugares Cercanos</string>
    <string name="imagenes">Imágenes</string>
    <string name="reglas">Reglas</string>
    <string name="icon_call">&#xf095;</string>
    <string name="page_one_text">Hola viajero!, andas en busca de un Hospedaje?. No te preocupes, te ofrecemos un montón de opciones </string>
    <string name="page_two_text">Te brindamos información detallada que te permite, comparar y escoger la casa ideal.</string>
    <string name="page_three_text">No tienes internet!, no importa, nuestro mapa te indica tu destino sin necesidad de conexión</string>
    <string name="contactos">Contactos</string>
    <string name="inicio">Inicio</string>
    <string name="rentas">Rentas</string>
    <string name="lista_de_deseo">Lista de Deseo</string>
    <string name="mapa">Mapa</string>
    <string name="informacion">Información</string>
    <string name="perfil">Mis Hospedajes</string>
    <string name="base_de_datos">Base de Datos</string>
    <string name="sincronizar">Sincronizar</string>
    <string name="version">Versión:</string>
    <string name="tec_inf_jose_manuel_cepero">Tec. Inf. José Manuel Cepero</string>
    <string name="desarrollo_y_dise_o">Desarrollo y Diseño:</string>
    <string name="politicas">Políticas</string>
    <string name="precio_minimo">precio mínimo:</string>
    <string name="deseada">Deseada</string>
    <string name="votar">Votar</string>
    <string name="comentar">Comentar</string>
    <string name="iniciar_sesion">Iniciar Sesión</string>
    <string name="busqueda_avanzada">Búsqueda avanzada</string>
    <string name="votacion">Votación</string>
    <string name="email">Email</string>
    <string name="casa">Casa</string>
    <string name="movil">Celular</string>
    <string name="sms">SMS</string>
    <string name="usuario">Usuario</string>
    <string name="contrase_a">Contraseña (*)</string>
    <string name="entrar"> Entrar</string>
    <string name="descargar_imagenes">Descargar Imágenes</string>
    <string name="sincronizacion">Sincronización</string>
    <string name="hola_invitado">Hola Invitado!</string>
    <string name="total_de_votos">Total de votos:</string>
    <string name="promedio">Promedio:</string>
    <string name="total_este_a_o">Este año:</string>
    <string name="total_este_mes">Este mes:</string>
    <string name="hoy">Hoy:</string>
    <string name="dash">-</string>
    <string name="posicionamiento">Posicionamiento</string>
    <string name="popularidad">Popularidad</string>
    <string name="vistas">Vistas</string>
    <string name="total_provincial">Total Provincial</string>
    <string name="total_nacional">Total Nacional</string>
    <string name="bienvenido_anfitri_n">Bienvenido Anfitrión</string>
    <string name="mis_hospedajes">Mis Hospedajes</string>
    <string name="nivel_de_detalle">Nivel de detalle</string>
    <string name="device">Token 6fb3e9a80b58bf0f441f0d9e8030488f36eac0d1</string>
    <string name="dialog_acra_comment">Escriba un comentario aquí</string>
    <string name="dialog_acra_text">La aplicación se ha cerrado inesperadamente. Se enviará un email con la causa del error. Ayudanos a mejorar !!</string>
    <string name="primer_nombre">Primer Nombre</string>
    <string name="confirme_contrase_a">Confirme Contraseña</string>
    <string name="codigo_de_activacion">Codigo de Activacion</string>
    <string name="d_nde_est_su_casa">Dónde está su casa?</string>
    <string name="pulse_prolongadamente_o_marque_opcion_gps">Pulse prolongadamente, o marque opcion GPS</string>
    <string name="perm_denied_msg">Has negado permanentemente el permiso requerido. Puede que la aplicación no funcione correctamente.</string>
    <string name="location_found">Ubicación encontrada</string>
    <string name="location_found_confirm">¿Está seguro que esta es su ubicación?</string>
    <string name="confirm_btn">Confirmar</string>
    <string name="dialog_location_save_btn">Guardar</string>
    <string name="dialog_location_enviroment_title">Entorno predominante</string>
    <string name="dialog_location_poi_tittle">Lugares de interés</string>
    <string name="atr_s">Atrás</string>
    <string name="siguiente">Siguiente</string>
    <string name="comenzar">Comenzar</string>
    <string name="mostrar_en_mapa">Mostrar en Mapa</string>
    <string name="primeros_5">Primeros 5</string>
    <string name="primeros_10">Primeros 10</string>
    <string name="todos">Todos</string>
    <string name="note_form_1">- Llenar correctamente los campos obligatorios <font fgcolor="#ff00BFA5">(*)</font></string>
    <string name="note_form_2">- Agregar imágenes con una calidad adecuada</string>
    <string name="note_form_3">- Su anuncio no será visible hasta ser verificado</string>
    <string name="escribe_aqu">Escribe aquí</string>
    <string name="hecho">Hecho</string>
    <string name="danos_tu_opini_n">Danos tu opinión</string>
</resources>