<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_1" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_home"
            android:title="@string/inicio" />
        <item
            android:id="@+id/nav_list"
            android:icon="@drawable/ic_th_list"
            android:title="@string/rentas" />
        <item
            android:id="@+id/nav_wish_list"
            android:icon="@drawable/ic_scroll"
            android:title="@string/lista_de_deseo" />
        <item
            android:id="@+id/nav_map"
            android:icon="@drawable/ic_map_marked"
            android:title="@string/mapa" />

        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_info"
            android:title="@string/informacion" />
    </group>

    <group android:id="@+id/group_2" android:checkableBehavior="single">
        <item
            android:id="@+id/nav_auth"
            android:icon="@drawable/ic_sign_in"
            android:title="@string/iniciar_sesion" />
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_sign_out"
            android:title="Cerrar Sesión"
            android:visible="false"/>
        <item
            android:id="@+id/nav_my_rents"
            android:icon="@drawable/ic_folder"
            android:title="Mis Rentas" />
        <item
            android:id="@+id/nav_profile"
            android:icon="@drawable/ic_chart_bar"
            android:title="Analitica"
            android:visible="false"/>
    </group>

</menu>