<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/onboarding_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fitsSystemWindows="true">

        <android.support.v4.view.ViewPager
            android:id="@+id/onboarding_viewpager"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/fl_content_btns"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:layout_gravity="bottom">

            <Button
                android:id="@+id/btn_back"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start|center"
                android:text="@string/atr_s"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="@dimen/root_pages_btn_text_size"
                android:alpha="0"
                android:fontFamily="@font/montserrat_light" />

            <com.tbuonomo.viewpagerdotsindicator.DotsIndicator
                android:id="@+id/dots_indicator"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                app:dotsColor="@color/colorPrimary"
                app:dotsCornerRadius="@dimen/dots_radius"
                app:dotsSize="@dimen/dots_size"
                app:dotsSpacing="@dimen/dots_spacing"
                app:dotsWidthFactor="2.5" />

            <Button
                android:id="@+id/btn_next"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/siguiente"
                android:textSize="@dimen/root_pages_btn_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:fontFamily="@font/montserrat_light"/>

            <Button
                android:id="@+id/btn_begin"
                style="@style/Widget.AppCompat.Button.Borderless"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center"
                android:text="@string/comenzar"
                android:textSize="@dimen/root_pages_btn_text_size"
                android:textColor="@color/colorPrimaryDark"
                android:visibility="gone"
                android:fontFamily="@font/montserrat_light"/>

        </FrameLayout>

    </android.support.design.widget.CoordinatorLayout>

</layout>