<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:animateLayoutChanges="true"
        android:background="@drawable/shape_white_round_10dp"
        android:orientation="vertical">

        <EditText
            android:id="@+id/et_feedback"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="24dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:background="@null"
            android:drawablePadding="5dp"
            android:drawableStart="@drawable/ic_fa_circle_edit_line"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="start|center"
            android:hint="@string/escribe_aqu"
            android:includeFontPadding="false"
            android:inputType="textMultiLine"
            android:maxLines="10"
            android:paddingBottom="10dp"
            android:paddingTop="10dp"
            android:textSize="14sp"
            app:layout_constraintBottom_toTopOf="@+id/btn_vote"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tv_title" />

        <TextView
            android:id="@+id/btn_vote"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="16dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:background="@drawable/shape_btn_color_primary"
            android:fontFamily="@font/montserrat_regular"
            android:gravity="center"
            android:padding="12dp"
            android:text="@string/hecho"
            android:textColor="@color/White_100"
            android:textAllCaps="true"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            android:layout_marginStart="8dp"
            android:layout_marginTop="24dp"
            android:text="@string/danos_tu_opini_n"
            android:fontFamily="@font/montserrat_bold"
            android:textSize="18sp"
            android:gravity="center"
            android:textColor="@color/material_color_blue_grey_500"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </android.support.constraint.ConstraintLayout>

</layout>